<resources>
    <string name="app_name">SmartA</string>
    <string name="username">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Ingresar</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="rutabello">Bello</string>
    <string name="cuadrar">Cuadrar</string>
    <string name="sincronizar">Sincronizar</string>
    <string name="infoapp">Info. de la app</string>
    <string name="cerrar">Cerrar sesión</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="actcliente">Actualizar Cliente</string>
    <string name="verabonos">Ver Abonos</string>
    <string name="verproductos">Ver Productos</string>
    <string name="ingresarabono">Ingresar Abono</string>
    <string name="nuevoprestamo">Ingresar Venta</string>
    <string name="direccion">Dirección:</string>
    <string name="telefono">Telefono:</string>
    <string name="fechafactura">Fecha factura:</string>
    <string name="valorventa">Venta:</string>
    <string name="cuota">Cuota:</string>
    <string name="lapso">Lapso:</string>
    <string name="comentario">Comentario:</string>
    <string name="saldo">Saldo:</string>
    <string name="saldoatrasado">Saldo Atra:</string>
    <string name="cuotasabonadas">Abonos</string>
    <string name="cuotasatrasadas">Cuotas Atra:</string>
    <string name="productos">Productos</string>
    <string name="detallefact">Factura</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="cedula">Cedula:</string>
    <string name="nombre">Nombre:</string>
    <string name="apellido">Apellido:</string>
    <string name="productosventa">Productos Venta</string>
    <string name="tituloAbonosFactura">Abonos a la Factura</string>
    <string name="fecha">Fecha</string>
    <string name="abono">Abono</string>
    <string name="codigofactura">Codigo factura:</string>
    <string name="tituloProductoFactura">Productos factura</string>
    <string name="codigo">Codigo</string>
    <string name="nombrep">Nombre</string>
    <string name="cantidad">Cantidad</string>
    <string name="valor">Valor</string>
    <string name="msgvalorvalido">Ingrese un valor valido</string>
    <string name="contacto">Contacto</string>
    <string name="correo_compañia">smartasoporte@gmail.com</string>
    <string name="telefono_compañia">3043630961</string>
    <string name="version_app">Version 1.0</string>
    <string name="diasCredito">Días Cred. :</string>
    <string name="agotado">Producto agotado</string>
    <string name="cant_no_valida">Cantidad no valida</string>
    <string name="datosfaltantes">Complete todos los datos del usuario</string>
    <string name="ingresararticulo">Ingresar Articulo</string>
    <string name="codigo_prod">Codigo:</string>
    <string name="descripcion">Descripción:</string>
    <string name="valor_capital">Valor capital:</string>
    <string name="valor_neto">Valor neto:</string>
    <string name="prod_no_existente">Producto no existe</string>
</resources>
