<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.wilderarias.smarta2.login.LoginActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/splash_logo_smarta"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tiUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/eUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_action_name"
            android:hint="@string/username"
            android:inputType="textAutoComplete" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tiPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <EditText
            android:id="@+id/ePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_action_passw"
            android:hint="@string/password"
            android:inputType="textPassword"
            />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/bIngresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="20sp" />

</LinearLayout>
</ScrollView>