<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.wilderarias.smarta2.detalle.VerProductosActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/tIdFact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tNombreC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tIdFact"
            android:textColor="@color/black"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tValor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tNombreC"
            android:text="@string/valorventa"
            android:textSize="20sp"
            android:layout_marginRight="30dp"/>

        <TextView
            android:id="@+id/tValorVenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tNombreC"
            android:layout_toRightOf="@id/tValor"
            android:gravity="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tfecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tValor"
            android:text="@string/fechafactura"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tFechaFactura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tValorVenta"
            android:layout_toRightOf="@id/tfecha"
            android:gravity="center"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/tituloProductoFactura"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="7">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:text="@string/codigo"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:text="@string/nombrep"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:text="@string/cantidad"/>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_height="wrap_content"
                android:text="@string/valor"/>
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/lProductos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></ListView>

</LinearLayout>