<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context="com.wilderarias.smarta2.ruta.ActualizarClienteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/direccion"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/eDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="calle 4" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/telefono"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/eTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="1234" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/comentario"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/eComentario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Informacion adicional cliente" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="@string/aceptar"
            android:textSize="20sp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorAccent"
            android:text="@string/cancelar"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>
