<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingresarabono"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eAbono"
        android:inputType="number" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/bAceptar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/aceptar"
            android:textSize="20sp"
            android:onClick="click"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/bCancelar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/cancelar"
            android:textSize="20sp"
            android:onClick="click"
            android:textColor="@color/white"/>
    </LinearLayout>
</LinearLayout>